Fix dark mode and logo.

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -57,6 +57,10 @@ $input-lg-padding-y: 0.75rem;
 $input-dark-color: #828D99;
 $input-dark-border: 1px solid #464D5C;
 $input-dark-bg: #1A233A;
+$input-dark-bg: #374151;
+$input-dark-color: #f9fafb;
+$input-dark-placeholder-color: #9ca3af;
+$input-dark-border: 1px solid #4b5563;
 
 $checkbox-active: #275EFE;
 $checkbox-active-inner: #fff;
